fix unreadCount alignment

--- a/src/components/JobBadge/JobBadge.sass
+++ b/src/components/JobBadge/JobBadge.sass
@@ -36,6 +36,7 @@
       @include typography('tiny')
       border: 2px solid white
       font-weight: bold
+      text-align: center
       &:after
         position: absolute
         top: -2px
